# ChristmasLightsKata

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  LightArray.cpp  LightArray.h  main.cpp
